--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
     "description": "A markdown-based static article site",
     "main": "index.js",
     "dependencies": {
-        "angular": "^1.7.3",
-        "angular-animate": "^1.7.3",
-        "angular-route": "^1.7.3",
-        "angular-sanitize": "^1.7.3",
-        "markdown-toc": "^1.2.0",
-        "zenscroll": "^4.0.2"
+        "angular": "^1.7.8",
+        "angular-animate": "^1.7.8",
+        "angular-route": "^1.7.8",
+        "angular-sanitize": "^1.7.8"
     },
     "devDependencies": {},
     "scripts": {},
@@ -17,5 +15,9 @@
         "markdown"
     ],
     "author": "Masayuki Sugahara",
-    "license": "Apache-2.0"
+    "license": "Apache-2.0",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:plageoj/mdstatic.git"
+    }
 }
